--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Playwrite+NZ+Basic:wght@100..400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
     <link rel="stylesheet" href="css/gstyle.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
-<body>
- <h1>hello</h1>
-    
-    <script src="js/main.js"></script>
-</body>
+    <body>
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">
+                    <a href="index.html"></a> 
+                        <img src="images/logo.png" alt="logo">
+                    </a>
+                </div>
+
+                
+            </div>
+        </nav>   
+        <script src="js/main.js"></script>
+    </body>
 </html>
