add a Home, About Us, Blog and Log in  page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
                     </a>
                 </div>
 
-                
+               <div class="main-menu">
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About US</a>
+                    </li>
+                     <li>
+                        <a href="#">Blog</a>
+                    </li>
+                     <li>
+                        <a class="btn btn-light" href="#">
+                            <i class="fas fa-user"></i>Log in
+                        </a>
+                    </li>
+                </ul>
+               </div> 
             </div>
         </nav>   
         <script src="js/main.js"></script>
